改动计数位置